[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mirutil"
version = "20220812.3"
authors = [{ name = "Mahdi Mir", email = "imahdimir@gmail.com" }]
description = "Tools for getting and cleaning TSE data"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "persiantools ~= 3.0.1",
    "pandas",
    "pyarrow",
    "fastparquet",
    "openpyxl ~= 3.0.10",
    "IPython"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Localization",
    "Topic :: Utilities"]
keywords = [
    "TSE",
    "Finance",
    "data",
    "cleaning",
    "data_cleaning",
    "Tehran",
    "Stocks"]

[project.urls]
"Homepage" = "https://github.com/imahdimir/pypkg-mirutil"
"Bug Tracker" = "https://github.com/imahdimir/pypkg-mirutil/issues"